# OpenMetropolis

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
assets/: settings.ini
assets/raw/: tileAtlas.xcf
include/OpenMetropolis/: City.hpp  CityGenerator.hpp  EditorScreen.hpp  GameConfig.hpp  GameScreen.hpp  Modality.hpp  Screen.hpp  ScreenController.hpp  ScreenManager.hpp
src/OpenMetropolis/: CMakeLists.txt  City.cpp  CityGenerator.cpp  EditorScreen.cpp  GameConfig.cpp  GameScreen.cpp  ScreenManager.cpp  main.cpp
